@@ -1,17 +1,17 @@
 package jplugman.test.plugin2;
 
-import com.google.common.collect.ImmutableSet;
 import jplugman.api.Plugin;
 import jplugman.api.Requirement;
 import jplugman.api.ServiceProvider;
-import jplugman.test.core.VersionGetter;
 import lombok.NonNull;
+
+import java.util.Set;
 
 public class Plugin2 implements Plugin {
 
     @Override
-    public @NonNull ImmutableSet<Requirement<?>> getRequirements() {
-        return ImmutableSet.of();
+    public @NonNull Set<Requirement<?>> getRequirements() {
+        return Set.of();
     }
 
     @Override
