@@ -1,11 +1,12 @@
 package jplugman.test.plugin8;
 
-import com.google.common.collect.ImmutableList;
 import jplugman.annotation.Extension;
 import jplugman.test.core.DummyService;
 import jplugman.test.lib.CollectionSorter;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
+
+import java.util.List;
 
 @Extension(point = DummyService.class, version = "4.1.0")
 @RequiredArgsConstructor
@@ -18,7 +19,7 @@ public class SorterLoader implements DummyService {
 
         final var sorter = CollectionSorter.create(moduleLayer);
 
-        final var sorted = sorter.sort(ImmutableList.of(1,7,2,3));
+        final var sorted = sorter.sort(List.of(1,7,2,3));
 
         return sorted.toString();
     }
