@@ -1,7 +1,5 @@
 package jplugman.test.test;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import jplugman.api.Application;
 import jplugman.api.PluginService;
 import jplugman.api.VersionedService;
@@ -9,38 +7,42 @@ import lombok.Getter;
 import lombok.NonNull;
 import lombok.Synchronized;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
+
 public class TestApplication implements Application {
 
     @Getter
-    private ImmutableList<PluginService> attachedPluginServices = ImmutableList.of();
+    private List<PluginService> attachedPluginServices = List.of();
 
     @Override
-    public @NonNull ImmutableSet<VersionedService> getApplicationServices(@NonNull Class<?> versionedServiceClass) {
-        return ImmutableSet.of();
+    public @NonNull Set<VersionedService> getApplicationServices(@NonNull Class<?> versionedServiceClass) {
+        return Set.of();
     }
 
     @Override
     @Synchronized
     public void plugService(@NonNull PluginService pluginService) {
-        attachedPluginServices = ImmutableList.<PluginService>builder()
-                                        .addAll(this.attachedPluginServices)
-                                        .add(pluginService)
-                                        .build();
+        final List<PluginService> updated = new ArrayList<>(attachedPluginServices.size()+1);
+        updated.addAll(attachedPluginServices);
+        updated.add(pluginService);
+        attachedPluginServices = updated;
     }
 
     @Override
     @Synchronized
     public void unplugService(@NonNull PluginService pluginService) {
-        var builder = ImmutableList.<PluginService>builder();
+        final List<PluginService> updated = new ArrayList<>(attachedPluginServices.size());
         boolean removed = false;
         for (PluginService attachedPluginServices : attachedPluginServices) {
             if (removed || attachedPluginServices != pluginService) {
-                builder.add(attachedPluginServices);
+                updated.add(attachedPluginServices);
             } else {
                 removed = true;
             }
         }
-        this.attachedPluginServices = builder.build();
+        this.attachedPluginServices = updated;
     }
 
 }
